Update controllers and html

--- a/Biblioteca-Digital/src/main/resources/templates/fragments/footer.html
+++ b/Biblioteca-Digital/src/main/resources/templates/fragments/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div>
         <p class="copyright">
-            Copyright &copy; Your Website 2024 - Lucas Aramberry
+            &copy; 2024 Biblioteca Digital - Lucas Aramberry
         </p>
         <ul class="links-footer">
             <a href="#"><li class="liFooter">Politica de privacidad</li></a>
