--- a/Biblioteca-Digital/src/main/resources/static/css/style.css
+++ b/Biblioteca-Digital/src/main/resources/static/css/style.css
@@ -36,12 +36,15 @@ ul{
 }
 
 .error{
-    color: red;
+     color: #ff0000;
+     text-align: center;
+     font-weight: bold;
 }
 
 .logout{
-    font-size: 0.8rem;
-    margin-bottom: 0;
+    color: #198754;
+    text-align: center;
+    font-weight: bold;
 }
 
 .bg-none{
@@ -50,12 +53,18 @@ ul{
 
 .botones{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
 }
 
 .botones a{
-    margin-bottom: 1rem;
+    margin: 0.5rem;
+}
+
+.fa-arrow-left {
+    font-size: 1.5rem;
+    color: #fff;
+    margin: 1rem;
 }
 
 /*******************************animacioness titulo****************************/
