--- a/Biblioteca-Digital/src/main/resources/templates/autores.html
+++ b/Biblioteca-Digital/src/main/resources/templates/autores.html
@@ -14,8 +14,7 @@
         <form action="/author" method="GET" enctype="multipart/form-data">
             <select class="filtrar-select" name="idAuthor">
                 <option selected disabled>Seleccionar</option>
-                <option>Todos</option>
-                <option th:each="author : ${authorsActive}" th:value="${author.id}" th:text="${author.name}"></option>
+                <option th:each="author : ${authorsList}" th:value="${author.id}" th:text="${author.name}"></option>
             </select>
             <div class="filtrar-boton">
                 <button type="submit" class="btn btn-warning">Buscar</button>
@@ -49,76 +48,77 @@
 
                 <div sec:authorize="hasRole('ADMIN')" class="botones">
 
-                    <a th:if="${author.unsubscribe != null}" th:href="@{'/author/high/' + ${author.id}}">
-                        <button type="button" class="btn btn-success btn-sm">Dar alta</button>
+                    <a th:if="${author.unsubscribe != null}" th:href="@{'/author/high/' + ${author.id}}"
+                       title="Dar de Alta">
+                        <i class="fas fa-arrow-up text-success"></i>
                     </a>
 
                     <a th:unless="${author.unsubscribe != null}"
-                       th:href="@{'/author/low/' + ${author.id}}">
-                        <button type="button" class="btn btn-danger btn-sm">Dar baja</button>
+                       th:href="@{'/author/low/' + ${author.id}}" title="Dar de Baja">
+                        <i class="fas fa-arrow-down text-danger"></i>
                     </a>
 
-                    <a th:href="@{'/author/update/' + ${author.id}}">
-                        <button type="button" class="btn btn-warning btn-sm">Modificar</button>
+                    <a th:href="@{'/author/update/' + ${author.id}}" title="Modificar">
+                        <i class="fas fa-feather-alt text-warning"></i>
                     </a>
 
-                    <a th:href="@{'/author/delete/' + ${author.id}}">
-                        <button type="button" class="btn btn-danger btn-sm">Eliminar</button>
+                    <a th:href="@{'/author/delete/' + ${author.id}}" title="Eliminar">
+                        <i class="fas fa-archive text-danger"></i>
                     </a>
-                    <!--<a sec:authorize="hasRole('ADMIN')" th:if="${author.unsubscribe != null}" th:href="@{/author/high(id=__${author.id}__)}" title="Alta"><i class="fa fa-arrow-up text-success"></i></a>-->
-                    <!--<a sec:authorize="hasRole('ADMIN')" th:unless="${author.unsubscribe != null}" th:href="@{/author/low(id=__${author.id}__)}" title="Baja"><i class="fa fa-ban text-danger"></i></a>-->
-                    <!--<a sec:authorize="hasRole('ADMIN')" th:href="@{/author/update-author(id=__${author.id}__)}" title="Modificar"><i class="fas fa-feather-alt text-warning"></i></a>-->
-                    <!--<a sec:authorize="hasRole('ADMIN')" th:href="@{/author/delete(id=__${author.id}__)}" title="Eliminar"><i class="fas fa-archive text-danger"></i></a>-->
+
                 </div>
             </div>
         </div>
     </div>
 </div>
 
+<!-- Created by Lucas Aramberry -->
 <div th:if="${books}" class="contenedor">
 
     <div class="contenedorHijo" th:each="book : ${books}">
 
-        <div class="card mb-3 bg-dark text-white">
+        <div class="card">
 
-            <div class="row g-0">
+            <div class="col-md-4 imagen-card">
+                <img th:src="@{'/photo/book/' + ${book.id}}" class="img-fluid rounded-start" alt="Portada">
+            </div>
 
-                <div class="col-md-4 imagen-card">
-                    <img th:src="@{'/photo/book/' + ${book.id}}" class="img-fluid rounded-start" alt="Portada">
-                </div>
+            <div class="col-md-8 card-body">
 
-                <div class="col-md-8">
-                    <div class="card-body">
+                <h5 class="card-title" th:text="${book.title}"></h5>
+                <br>
 
-                        <h5 class="card-title" th:text="${book.title}"></h5>
-                        <br>
+                <ul>
+                    <li th:text="'ISBN: ' + ${book.isbn}"></li>
+                    <li th:text="'AUTOR: ' + ${book.author.name}"></li>
+                    <li th:text="'EDITORIAL: ' + ${book.publisher.name}"></li>
+                    <li th:text="'EJEMPLARES DISPONIBLES: ' + ${book.amountCopiesRemaining}"></li>
+                </ul>
 
-                        <ul>
-                            <li th:text="'ISBN: ' + ${book.isbn}"></li>
-                            <li th:text="'AUTOR: ' + ${book.author.name}"></li>
-                            <li th:text="'EDITORIAL: ' + ${book.publisher.name}"></li>
-                            <li th:text="'EJEMPLARES DISPONIBLES: ' + ${book.amountCopiesRemaining}"></li>
-                        </ul>
+                <a class="btn btn-warning" th:href="@{'/book/view/' + ${book.id}}" role="button">Ver más</a>
 
-                        <div class="form-group2 text-center">
+                <div sec:authorize="hasRole('ROLE_ADMIN')" class="botones">
 
-                            <a class="btn btn-warning" th:href="@{'/books/view/' + ${book.id}}" role="button">Ver
-                                más</a>
+                    <a th:if="${book.unsubscribe != null}"
+                       th:href="@{'/book/high/' + ${book.id}}" title="Dar de Alta">
+                        <i class="fas fa-arrow-up text-success"></i>
+                    </a>
 
-                            <a sec:authorize="hasRole('ADMIN')" th:if="${book.unsubscribe != null}"
-                               th:href="@{'/book/high/' + ${book.id}}" title="Alta">
-                                <i class="fa fa-arrow-up text-success"></i>
-                            </a>
+                    <a th:unless="${book.unsubscribe != null}"
+                       th:href="@{'/book/low/' + ${book.id}}" title="Dar de Baja">
+                        <i class="fas fa-arrow-down text-danger"></i>
+                    </a>
 
-                            <a sec:authorize="hasRole('ADMIN')" th:unless="${book.unsubscribe != null}"
-                               th:href="@{'/book/low/' + ${book.id}}" title="Baja"><i
-                                    class="fa fa-ban text-danger"></i></a>
+                    <a th:href="@{'/book/update/' + ${book.id}}"
+                       title="Modificar">
+                        <i class="fas fa-feather-alt text-warning"></i>
+                    </a>
 
-                            <a sec:authorize="hasRole('ADMIN')" th:href="@{'/book/update/'+ ${book.id}}"
-                               title="Modificar"><i class="fas fa-feather-alt text-warning"></i></a>
-                            <!--<a sec:authorize="hasRole('ADMIN')" th:href="@{/libros/delete(id=__${book.id}__)}" title="Eliminar"><i class="fas fa-archive text-danger"></i></a>-->
-                        </div>
-                    </div>
+                    <a th:href="@{'/book/delete/' + ${book.id}}"
+                       title="Eliminar">
+                        <i class="fas fa-archive text-danger"></i>
+                    </a>
+
                 </div>
             </div>
         </div>
