--- a/Biblioteca-Digital/src/main/resources/templates/editoriales.html
+++ b/Biblioteca-Digital/src/main/resources/templates/editoriales.html
@@ -15,8 +15,7 @@
         <form action="/publisher" method="GET" enctype="multipart/form-data">
             <select class="filtrar-select" name="idPublisher">
                 <option selected disabled>Seleccionar</option>
-                <option>Todos</option>
-                <option th:each="publisher : ${publisherActive}" th:value="${publisher.id}"
+                <option th:each="publisher : ${publisherList}" th:value="${publisher.id}"
                         th:text="${publisher.name}"></option>
             </select>
 
@@ -54,25 +53,24 @@
 
                 <div sec:authorize="hasRole('ADMIN')" class="botones">
 
-                    <a th:if="${publisher.unsubscribe != null}" th:href="@{'/publisher/high/' + ${publisher.id}}">
-                        <button type="button" class="btn btn-success btn-sm">Dar alta</button>
+                    <a th:if="${publisher.unsubscribe != null}" th:href="@{'/publisher/high/' + ${publisher.id}}"
+                       title="Dar de Alta">
+                        <i class="fas fa-arrow-up text-success"></i>
                     </a>
 
-                    <a th:unless="${publisher.unsubscribe != null}" th:href="@{'/publisher/low/' + ${publisher.id}}">
-                        <button type="button" class="btn btn-danger btn-sm">Dar baja</button>
+                    <a th:unless="${publisher.unsubscribe != null}" th:href="@{'/publisher/low/' + ${publisher.id}}"
+                       title="Dar de Baja">
+                        <i class="fas fa-arrow-down text-danger"></i>
                     </a>
 
-                    <a th:href="@{'/publisher/update/' + ${publisher.id}}">
-                        <button type="button" class="btn btn-warning btn-sm">Modificar</button>
+                    <a th:href="@{'/publisher/update/' + ${publisher.id}}" title="Modificar">
+                        <i class="fas fa-feather-alt text-warning"></i>
                     </a>
 
-                    <a th:href="@{'/publisher/delete/' + ${publisher.id}}">
-                        <button type="button" class="btn btn-danger btn-sm">Eliminar</button>
+                    <a th:href="@{'/publisher/delete/' + ${publisher.id}}" title="Eliminar">
+                        <i class="fas fa-archive text-danger"></i>
                     </a>
-                    <!--<a sec:authorize="hasRole('ADMIN')" th:if="${editorial.baja != null}" th:href="@{/editoriales/alta(id=__${editorial.id}__)}" title="Alta"><i class="fa fa-arrow-up text-success"></i></a>-->
-                    <!--<a sec:authorize="hasRole('ADMIN')" th:unless="${editorial.baja != null}" th:href="@{/editoriales/baja(id=__${editorial.id}__)}" title="Baja"><i class="fa fa-ban text-danger"></i></a>-->
-                    <!--<a sec:authorize="hasRole('ADMIN')" th:href="@{/editoriales/modificar(id=__${editorial.id}__)}" title="Modificar"><i class="fas fa-feather-alt text-warning"></i></a>-->
-                    <!--<a sec:authorize="hasRole('ADMIN')" th:href="@{/editoriales/eliminar(id=__${editorial.id}__)}" title="Eliminar"><i class="fas fa-archive text-danger"></i></a>-->
+
                 </div>
             </div>
         </div>
@@ -84,46 +82,48 @@
 
     <div class="contenedorHijo" th:each="book : ${books}">
 
-        <div class="card mb-3 bg-dark text-white">
+        <div class="card">
 
-            <div class="row g-0">
+            <div class="col-md-4 imagen-card">
+                <img th:src="@{'/photo/book/' + ${book.id}}" class="img-fluid rounded-start" alt="Portada">
+            </div>
 
-                <div class="col-md-4 imagen-card">
-                    <img th:src="@{'/photo/book/' + ${book.id}}" class="img-fluid rounded-start" alt="Portada">
-                </div>
+            <div class="col-md-8 card-body">
 
-                <div class="col-md-8">
-                    <div class="card-body">
+                <h5 class="card-title" th:text="${book.title}"></h5>
+                <br>
 
-                        <h5 class="card-title" th:text="${book.title}"></h5>
-                        <br>
+                <ul>
+                    <li th:text="'ISBN: ' + ${book.isbn}"></li>
+                    <li th:text="'AUTOR: ' + ${book.author.name}"></li>
+                    <li th:text="'EDITORIAL: ' + ${book.publisher.name}"></li>
+                    <li th:text="'EJEMPLARES DISPONIBLES: ' + ${book.amountCopiesRemaining}"></li>
+                </ul>
 
-                        <ul>
-                            <li th:text="'ISBN: ' + ${book.isbn}"></li>
-                            <li th:text="'AUTOR: ' + ${book.author.name}"></li>
-                            <li th:text="'EDITORIAL: ' + ${book.publisher.name}"></li>
-                            <li th:text="'EJEMPLARES DISPONIBLES: ' + ${book.amountCopiesRemaining}"></li>
-                        </ul>
+                <a class="btn btn-warning" th:href="@{'/book/view/' + ${book.id}}" role="button">Ver más</a>
 
-                        <div class="form-group2 text-center">
+                <div sec:authorize="hasRole('ROLE_ADMIN')" class="botones">
 
-                            <a class="btn btn-warning" th:href="@{'/books/view/' + ${book.id}}" role="button">Ver
-                                más</a>
+                    <a th:if="${book.unsubscribe != null}"
+                       th:href="@{'/book/high/' + ${book.id}}" title="Dar de Alta">
+                        <i class="fas fa-arrow-up text-success"></i>
+                    </a>
 
-                            <a sec:authorize="hasRole('ADMIN')" th:if="${book.unsubscribe != null}"
-                               th:href="@{'/book/high/' + ${book.id}}" title="Alta">
-                                <i class="fa fa-arrow-up text-success"></i>
-                            </a>
+                    <a th:unless="${book.unsubscribe != null}"
+                       th:href="@{'/book/low/' + ${book.id}}" title="Dar de Baja">
+                        <i class="fas fa-arrow-down text-danger"></i>
+                    </a>
 
-                            <a sec:authorize="hasRole('ADMIN')" th:unless="${book.unsubscribe != null}"
-                               th:href="@{'/book/low/' + ${book.id}}" title="Baja"><i
-                                    class="fa fa-ban text-danger"></i></a>
+                    <a th:href="@{'/book/update/' + ${book.id}}"
+                       title="Modificar">
+                        <i class="fas fa-feather-alt text-warning"></i>
+                    </a>
 
-                            <a sec:authorize="hasRole('ADMIN')" th:href="@{'/book/update/'+ ${book.id}}"
-                               title="Modificar"><i class="fas fa-feather-alt text-warning"></i></a>
-                            <!--<a sec:authorize="hasRole('ADMIN')" th:href="@{/libros/delete(id=__${book.id}__)}" title="Eliminar"><i class="fas fa-archive text-danger"></i></a>-->
-                        </div>
-                    </div>
+                    <a th:href="@{'/book/delete/' + ${book.id}}"
+                       title="Eliminar">
+                        <i class="fas fa-archive text-danger"></i>
+                    </a>
+
                 </div>
             </div>
         </div>
