--- a/Biblioteca-Digital/src/main/resources/templates/login.html
+++ b/Biblioteca-Digital/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
         <h1 class="h3 mb-3 fw-normal">Iniciar Sesión</h1>
 
         <p th:if="${error} != null" th:text="${error}" class="error"></p>
-        <p th:if="${logout} != null" th:text="${logout}" class="logout text-success"></p>
+        <p th:if="${logout} != null" th:text="${logout}" class="logout"></p>
 
         <div class="form-floating">
             <input type="email" class="form-control" id="username" name="username" placeholder="name@example.com"
@@ -28,7 +28,7 @@
             <label for="password">Contraseña</label>
         </div>
 
-        <button class="btn btn-primary w-100 py-2" type="submit">Ingresar</button>
+        <button class="btn btn-secondary w-100 py-2" type="submit">Ingresar</button>
 
     </form>
 </main>
